# oldflight

./: .env.example  .gitignore  CMakeLists.txt  Info.plist.in  Makefile  bitmap.h  draw_logo.c  flight.c  graph.h  strike_cmdr.cpp  uflight.c
oldflight/: oldflight.sln  oldflight.vcxproj
scripts/: gen_icon.sh  release.sh
